# Logic-Physicochemical-Laboratory

./: .gitignore  DEVELOPER_GUIDE.md  README.md  UPDATE_PLAN.md  deploy.ps1  index.html  sw.js
.github/: copilot-instructions.md
doc/: BIOLOGY_TEXT_RENDERING_ANALYSIS.md  BIOLOGY_TYPO_AUDIT.md  DEPLOY.md  DEVELOPER_GUIDE.md  MOBILE_AUDIT_v4.1.1.md  UI_AUDIT_v4.0.5.md  UI_TEMPLATES.md  UPDATE_PLAN.md  have_done.md
muban/: README.md  template.html
pages/algorithms/: algorithms.css  algorithms.js  data-structures.js  dynamic-programming.js  graph-algo.js  recursion-vis.js  search-algorithms.js  sorting-compare.js  string-matching.js
pages/biology/: biology-zoom.js  biology.css  biology.js  cell-structure.js  cellular-respiration.js  dna-helix.js  ecosystem.js  gene-expression.js  gene-mutation.js  genetics.js  immune-system.js  meiosis.js  mitosis.js  neural-regulation.js  photosynthesis.js  substance-transport.js
pages/chemistry/: atomic-structure.js  chemical-bond.js  chemical-equilibrium.js  chemical-reactions.js  chemistry.css  electrochemistry.js  ionic-reaction.js  molecular-structure.js  organic-chemistry.js  periodic-table.js  reaction-rate.js  redox.js  solution-ionization.js
pages/home/: home.css  home.js
pages/mathematics/: calculus.js  complex-numbers.js  conic-sections.js  exp-log.js  function-properties.js  geometry.js  inequality.js  mathematics.css  mathematics.js  permutation-combination.js  probability.js  sequences.js  set-operations.js  solid-geometry.js  trigonometry.js  vector-ops.js
server/: CMakeLists.txt  README.md  main.cpp
(+60 files in other folders)
